docs: make sure tags in sb-sidemenu dont wrap over two lines

--- a/@udir-design/react/.storybook/manager.css
+++ b/@udir-design/react/.storybook/manager.css
@@ -3,6 +3,7 @@
   margin-left: auto;
   margin-right: 34px;
   min-height: 18px;
+  flex-shrink: 0;
 }
 
 .sidebar-subheading-icon {
